--- a/angular.json
+++ b/angular.json
@@ -10,10 +10,14 @@
       "sourceRoot": "src",
       "prefix": "app",
       "i18n": {
-        "sourceLocale": "en-US",
+        "sourceLocale": {
+          "code": "en",
+          "baseHref": ""
+        },
         "locales": {
           "fr": {
-            "translation": "src/locale/messages.fr.json"
+            "translation": "src/locale/messages.fr.json",
+            "baseHref": ""
           }
         }
       },
