--- a/firebase.json
+++ b/firebase.json
@@ -1,20 +1,25 @@
 {
   "hosting": [
     {
-      "source": ".",
-      "ignore": [
-        "firebase.json",
-        "**/.*",
-        "**/node_modules/**"
-      ],
+      "public": "dist/deeplinks/browser",
+      "target": "deeplinks",
+      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
       "frameworksBackend": {
         "region": "europe-west1"
+      },
+      "rewrites": [
+        {
+          "source": "/en{,/**}",
+          "destination": "/en/index.html"
+        },
+        {
+          "source": "/fr{,/**}",
+          "destination": "/fr/index.html"
+        }
+      ],
+      "i18n": {
+        "root": "/"
       }
-    },
-    {
-      "target": "deeplinks",
-      "source": ".",
-      "frameworksBackend": {}
     }
   ]
 }
