--- a/firebase.json
+++ b/firebase.json
@@ -1,25 +1,21 @@
 {
   "hosting": [
     {
-      "public": "dist/deeplinks/browser",
       "target": "deeplinks",
+      "source": ".",
       "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
       "frameworksBackend": {
         "region": "europe-west1"
       },
+      "i18n": {
+        "root": "dist/deeplinks/browser"
+      },
       "rewrites": [
         {
-          "source": "/en{,/**}",
-          "destination": "/en/index.html"
-        },
-        {
-          "source": "/fr{,/**}",
-          "destination": "/fr/index.html"
+          "source": "**",
+          "destination": "/index.html"
         }
-      ],
-      "i18n": {
-        "root": "/"
-      }
+      ]
     }
   ]
 }
