--- a/firebase.json
+++ b/firebase.json
@@ -1,21 +1,19 @@
 {
   "hosting": [
     {
-      "target": "deeplinks",
-      "source": ".",
+      "public": "dist/deeplinks/browser",
       "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-      "frameworksBackend": {
-        "region": "europe-west1"
-      },
       "i18n": {
-        "root": "dist/deeplinks/browser"
+        "root": "/"
       },
       "rewrites": [
         {
           "source": "**",
           "destination": "/index.html"
         }
-      ]
+      ],
+      "target": "deeplinks",
+      "frameworksBackend": {}
     }
   ]
 }
